# cogniwall

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  agentguard.yaml  agentguard_idea.md  cogniwall.yaml  cogniwall_idea.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agentguard/: __init__.py  config.py  guard.py  pipeline.py  verdict.py
agentguard/patterns/: __init__.py  credit_card.py  ssn.py
agentguard/rules/: __init__.py  base.py  financial.py  pii.py  prompt_injection.py  rate_limit.py  tone_sentiment.py
cogniwall/: __init__.py  audit.py  config.py  guard.py  pipeline.py
cogniwall/patterns/: __init__.py  common.py  credit_card.py  ssn.py
cogniwall/rules/: __init__.py  base.py  financial.py  llm_provider.py  pii.py  prompt_injection.py  rate_limit.py  tone_sentiment.py
dashboard/: .env.example  docker-compose.yml  package-lock.json  package.json  seed.ts
dashboard/prisma/: schema.prisma
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: analytics-cards.tsx  event-detail.tsx  event-filters.tsx  event-summary-stats.tsx  event-table.tsx  payload-viewer.tsx  sidebar.tsx  time-range-selector.tsx
dashboard/src/lib/: auth.ts  queries.ts  validation.ts
docs/: product-roadmap.md
docs/marketing/: github-outbound-research.md
docs/superpowers/plans/: 2026-03-25-agentguard-core-api.md  2026-03-25-agentguard-phase2.md  2026-03-25-cogniwall-core-api.md  2026-03-25-cogniwall-phase2.md  2026-03-26-phase3-audit-dashboard.md
docs/superpowers/specs/: 2026-03-25-agentguard-core-api-design.md  2026-03-25-agentguard-phase2-design.md  2026-03-25-cogniwall-core-api-design.md  (+2 more)
tests/: test_adversarial.py  test_adversarial_r2.py  test_adversarial_r3.py  test_adversarial_r4.py  test_audit.py  test_config.py  test_custom_rules.py  test_guard.py  test_patterns.py  test_pipeline.py  test_verdict.py
tests/fixtures/: invalid_missing_field.yaml  invalid_unknown_type.yaml  valid_config.yaml
tests/test_robustness/: __init__.py  test_concurrency.py  test_config_fuzzing.py  test_pipeline_resilience.py  test_stress.py
tests/test_rules/: test_base.py  test_financial.py  test_llm_provider.py  test_pii.py  test_prompt_injection.py  test_rate_limit.py  test_tone_sentiment.py
(+8 files in other folders)
