[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cogniwall"
version = "0.1.0"
authors = [
  { name="CogniWall", email="cogniwall@gmail.com" },
]
description = "A programmable firewall for autonomous AI agents"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
keywords = ["ai", "guardrails", "firewall", "llm", "prompt-injection", "pii", "ai-safety", "ai-agents"]
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai = ["openai>=1.50.0"]
presidio = ["presidio-analyzer>=2.2"]
all = ["cogniwall[anthropic,openai,presidio]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/cogniwall/cogniwall"
Repository = "https://github.com/cogniwall/cogniwall"
"Bug Tracker" = "https://github.com/cogniwall/cogniwall/issues"
Changelog = "https://github.com/cogniwall/cogniwall/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "live_llm: requires a live LLM API key (skipped by default)",
]
